# ExperimentalTgBot

./: .gitignore  CMakeLists.txt  README.md
include/: config.hpp  logger.hpp  math.hpp
include/logger/: logger.hpp
include/model/: perceptron.hpp
source/: main.cpp
source/app/: main.cpp
source/config/: parse_args.cpp
source/logger/: log_types.cpp  logger.cpp
source/math/: vector.cpp
source/model/: perceptron.cpp
